Reduce bottom margin in blog excerpt to prevent clipping

--- a/css/blog.css
+++ b/css/blog.css
@@ -289,7 +289,7 @@ body {
     color: var(--gray-medium);
     font-size: 1rem;
     line-height: 1.6;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     /* Truncate to 3 lines */
     display: -webkit-box;
     -webkit-line-clamp: 4;
